--- a/package.json
+++ b/package.json
@@ -19,10 +19,19 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "faucet": "0.0.1",
+    "husky": "^3.0.1",
+    "semistandard": "^13.0.1",
     "tape": "^4.4.0"
   },
   "scripts": {
+    "lint": "semistandard",
     "test": "node test/index.js | faucet"
+  },
+  "hooks": {
+    "pre-commit": "npm run lint && npm run test"
+  },
+  "semistandard": {
+    "ignore": "test/fixtures"
   },
   "keywords": [
     "fs",
